[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic-settings = ">=2.11.0"
fastapi = ">=0.120.1,<0.121.0"
uvicorn = ">=0.38.0,<0.39.0"
orjson = ">=3.11.4,<4.0.0"
gunicorn = "^23.0.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.44" }
asyncpg = "^0.30.0"
alembic = "^1.17.1"
faststream = "^0.6.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.6"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
